# PPE-Safety-Compliance-Detection-System

./: README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: __init__.py  stats.py  stream.py  websocket.py
backend/app/core/: config.py  websocket.py
backend/app/ml/: hybrid_detector.py  person_detector.py  person_gallery.py  sam2_segmenter.py  sam3_detector.py  sam3_segmenter.py  stream_processor.py  yolov11_detector.py
backend/app/models/: person.py
backend/app/services/: deduplication.py  event_service.py  persistence.py
frontend/: package.json  pnpm-lock.yaml
frontend/public/demo/: demo.webm
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/events/: page.tsx
frontend/src/app/monitor/: page.tsx
frontend/src/app/persons/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: animated-icon.tsx  charts.tsx  demo-banner.tsx  events-table.tsx  motion-wrapper.tsx  page-header.tsx  page-loader.tsx  persons-table.tsx  search-bar.tsx  stats-card.tsx  video-player.tsx
frontend/src/components/layout/: sidebar.tsx
frontend/src/components/ui/: animated-counter.tsx  badge.tsx  card.tsx
frontend/src/hooks/: use-mounted.ts
frontend/src/lib/: demo-data.ts  queries.ts  storage.ts
frontend/src/providers/: demo-context.tsx  query-provider.tsx  theme-provider.tsx  websocket-provider.tsx
